src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse5.deca
{
    int x=2;
    if (x+=3){
        println("x=2");
    }
}